update: docker compose

--- a/panel/docker-compose.yml
+++ b/panel/docker-compose.yml
@@ -1,63 +1,55 @@
 version: '3.8'
-x-common:
-  database:
-    &db-envoirnment
-    # do not remove &db-password, it is used in panel
-    MYSQL_ROOT_PASSWORD: &db-password "root"
-    MYSQL_PASSWORD: "password"
-  panel:
-    &panel-environment
-    APP_URL: "https://panel.example.com"
-    # List of valid timezone can be found here https://www.php.net/manual/en/timezones.php
-    APP_TIMEZONE: "UTC"
-    APP_SERVICE_AUTHOR: "noreply@example.com"
-    TRUSTED_PROXIES: "*"
-  mail:
-    &mail-environment
-    MAIL_DRIVER: "smtp"
-    MAIL_FROM: "noreply@example.com"
-    MAIL_HOST: "mail.example.com"
-    MAIL_PORT: "587"
-    MAIL_USERNAME: ""
-    MAIL_PASSWORD: ""
-    MAIL_ENCRYPTION: "true"
-
-#
-# ------------------------------
-# DANGER ZONE
-# ------------------------------
-#
-# Do not edit anything below this line unless you know what you are doing.
-#
-
 services:
   database:
     image: mariadb:10.5
     restart: always
     command: --default-authentication-plugin=mysql_native_password
     volumes:
-      - /srv/pterodactyl/database:/var/lib/mysql
+      - "/srv/pterodactyl/database:/var/lib/mysql"
     environment:
-      <<: *db-envoirnment
+      MYSQL_PASSWORD: "CHANGE_ME"
+      MYSQL_ROOT_PASSWORD: "CHANGE_ME"
       MYSQL_DATABASE: "panel"
       MYSQL_USER: "pterodactyl"
+    networks:
+      - pterodactyl
   cache:
     image: redis:alpine
     restart: always
+    networks:
+      - pterodactyl
   panel:
     image: ghcr.io/pterodactyl/panel:latest
     restart: always
-    ports:
-      - "80:80"
-      - "443:443"
+    networks:
+      - proxy
+      - pterodactyl
     volumes:
       - "/srv/pterodactyl/var/:/app/var/"
       - "/srv/pterodactyl/nginx/:/etc/nginx/http.d/"
       - "/srv/pterodactyl/certs/:/etc/letsencrypt/"
       - "/srv/pterodactyl/logs/:/app/storage/logs"
-    enviornment:
-      <<: [*panel-environment, *mail-environment]
-      DB_PASSWORD: *db-password
+    depends_on:
+      - database
+      - cache
+    environment:
+      # This URL should be the URL that your reverse proxy routes to the panel server
+      APP_URL: "https://pterodactyl.example.com"
+      # A list of valid timezones can be found here: http://php.net/manual/en/timezones.php
+      APP_TIMEZONE: "UTC"
+      APP_SERVICE_AUTHOR: "noreply@example.com"
+      TRUSTED_PROXIES: "*" # Set this to your proxy IP
+      # Uncomment the line below and set to a non-empty value if you want to use Let's Encrypt
+      # to generate an SSL certificate for the Panel.
+      # LE_EMAIL: ""
+      MAIL_FROM: "noreply@example.com"
+      MAIL_DRIVER: "smtp"
+      MAIL_HOST: "mail"
+      MAIL_PORT: "1025"
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      MAIL_ENCRYPTION: "true"
+      DB_PASSWORD: "CHANGE_ME"
       APP_ENV: "production"
       APP_ENVIRONMENT_ONLY: "false"
       CACHE_DRIVER: "redis"
@@ -66,12 +58,20 @@ services:
       REDIS_HOST: "cache"
       DB_HOST: "database"
       DB_PORT: "3306"
-      
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.pterodactyl.entrypoints=http"
+      - "traefik.http.routers.pterodactyl.rule=Host(`pterodactyl.example.com`)"
+      - "traefik.http.middlewares.pterodactyl-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.pterodactyl.middlewares=pterodactyl-https-redirect"
+      - "traefik.http.routers.pterodactyl-secure.entrypoints=https"
+      - "traefik.http.routers.pterodactyl-secure.rule=Host(`pterodactyl.example.com`)"
+      - "traefik.http.routers.pterodactyl-secure.tls=true"
+      - "traefik.http.routers.pterodactyl-secure.service=pterodactyl"
+      - "traefik.http.services.pterodactyl.loadbalancer.server.port=80"
+      - "traefik.docker.network=proxy"
 networks:
-  default:
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
-
-
-
+  proxy:
+    external: true
+  pterodactyl:
+    driver: bridge
