--- a/wings/config.yml
+++ b/wings/config.yml
@@ -6,7 +6,7 @@ api:
   host: 0.0.0.0
   port: 443
   ssl:
-    enabled: false
+    enabled: true
     cert: /etc/letsencrypt/live/node-01.example.com/fullchain.pem
     key: /etc/letsencrypt/live/node-01.example.com/privkey.pem
   upload_limit: 100
